# maxrest_ai

./: .gitignore  README.md  agent.py  api_tool.py  asset.py  location.py  maxrest.py  person.py  pyproject.toml
database/: maximo.db
